<resources>
    <string name="app_name">frame</string>
    <string name="upload_pic">上傳圖片</string>
    <string name="upload_imagepacker_weixin">仿微信上传</string>
    <string name="rand_psw">生成随机密码</string>
    <string name="number_10">10</string>
    <string name="cancle">取消</string>
    <string name="ref">刷新</string>
    <string name="copy">复制</string>
    <string name="create_rend_psd">生成随机密码</string>
    <string name="instance_dialog">对话框实例</string>
    <string name="share">系统分享功能</string>
    <string name="SMS_MSG">xx不知道你有没有发送，反正你是回到这个界面了~~~~~~~~~</string>
    <string name="system_send_msg">系统短信发送</string>
    <string name="Main_TitleName">我是TitleName</string>

    <!--刷新-->
    <string name="LOADING_MORE">正在加载更多</string>
    <string name="RELEASE_TO_LOAD_MORE">松开加载更多</string>
    <string name="SWIPE_TO_LOAD_MORE">点击加载更多</string>
    <string name="LOAD_MORE_RETURNING">加载正在返回中</string>
    <string name="LOAD_MORE_COMPLETE">加载更多完成</string>
    <string name="REFRESHING">正在刷新</string>
    <string name="RELEASE_TO_REFRESH">松开刷新</string>
    <string name="SWIPE_TO_REFRESH">点击刷新</string>
    <string name="REFRESH_RETURNING">刷新正在返回中</string>
    <string name="refresh">刷新</string>







    <!--服务器请求出现的code码问题-->
    <string name="http_code_default">未知错误%1$d</string>
    <string name="http_code_201">新资源被创建</string>
    <string name="http_code_202">已接受处理请求但尚未完成</string>
    <string name="http_code_204">资源为空</string>
    <string name="http_code_301">资源的URI被更新</string>
    <string name="http_code_400">坏请求</string>
    <string name="http_code_401">禁止访问</string>
    <string name="http_code_404">资源不存在</string>
    <string name="http_code_406">服务端不支持所需表示</string>
    <string name="http_code_409">通用冲突</string>
    <string name="http_code_412">前置条件失败</string>
    <string name="http_code_415">接受到的表示不受支持</string>
    <string name="http_code_500">服务器错误</string>
    <string name="http_code_503">服务当前无法处理请求</string>
    <string name="http_code_701">请求的token为空或已失效</string>
    <string name="Network_Connection_timeout">网络连接超时</string>
    <string name="no_network">网络中断，请检查您的网络状态</string>
    <string name="loading_tip">加载中…</string>
    <string name="no_data">暂无数据</string>
</resources>
