<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pop"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rand_psw"
            android:textSize="@dimen/dp_15" />

        <TextView
            android:id="@+id/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/number_10"
            android:textColor="@color/blue"
            android:textSize="@dimen/dp_15"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <TextView
        android:id="@+id/create_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rand_psw" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:max="20"
        android:progress="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="包含大写字母" />

        <CheckBox
            android:id="@+id/small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="包含小写字母" />

        <CheckBox
            android:id="@+id/special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="包含特殊字符" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancle" />

        <Button
            android:id="@+id/btn_ref"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/ref"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/copy"
            android:textColor="@color/blue" />

    </LinearLayout>
</LinearLayout>
