<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/clear_data"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/upload_imagePicker"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/upload_pic"
                    tools:ignore="OnClick" />

                <Button
                    android:id="@+id/upload_imagePicker_weixin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/upload_imagepacker_weixin"
                    tools:ignore="OnClick" />

                <Button
                    android:id="@+id/upload"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/upload_pic"
                    tools:ignore="OnClick" />

            </LinearLayout>

            <ImageView
                android:id="@+id/loadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_default_image" />

            <Button
                android:id="@+id/btn_randomCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/create_rend_psd" />

            <Button
                android:id="@+id/instance_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/instance_dialog" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>